Update sources